force-app/main/default/objects/Master_Project__c/Master_Project__c.object-meta.xml
<CustomObject>
    <label>Master Project</label>
    <nameField>
        <label>Master Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>