force-app/main/default/objects/Master_Project__c/fields/Incentive_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Calculation__c</fullName>
    <label>Incentive Calculation %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>