force-app/main/default/objects/Master_Project__c/fields/latitude__c.field-meta.xml
<CustomField>
    <fullName>latitude__c</fullName>
    <label>latitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>