force-app/main/default/objects/Master_Project__c/fields/launch_Setup__c.field-meta.xml
<CustomField>
    <fullName>launch_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch Setup</label>
    <type>Checkbox</type>
</CustomField>