force-app/main/default/objects/Master_Project__c/fields/longitude__c.field-meta.xml
<CustomField>
    <fullName>longitude__c</fullName>
    <label>longitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>