force-app/main/default/objects/Master_Project__c/fields/Siniya_Island_Project__c.field-meta.xml
<CustomField>
    <fullName>Siniya_Island_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Siniya Island Project</label>
    <type>Checkbox</type>
</CustomField>