force-app/main/default/objects/Master_Project__c/fields/Type_Of_Project__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Project__c</fullName>
    <label>Type Of Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial + Residential</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Multi Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>